# sports_pulse

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yaml  oracle-v2-architecture.md  tasks.txt  todo.txt
mock-api/: .air.toml  Dockerfile  go.mod  main.go  matches.go  schedule.go  server.go
oracle/: Dockerfile  Makefile  (+4 more)
relayer/: .air.toml  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  main_test.go
relayer/cmd/relayer/: main.go  main_test.go
relayer/config/: db.go  env.go  env_test.go
relayer/db/: db.go
relayer/entity/: match.go
relayer/internal/config/: db.go  env.go  env_test.go
relayer/internal/entity/: match.go
relayer/internal/repository/: match_repository.go
relayer/internal/service/: broadcaster.go  broadcaster_config.go  broadcaster_test.go  match_already_submitted.go
relayer/internal/services/: broadcaster.go  broadcaster_config.go  broadcaster_test.go
relayer/repository/: match_repository.go
relayer/services/: blockchain_broadcaster.go  broadcaster.go  broadcaster_config.go  broadcaster_test.go  load_private_key.go  match_already_submitted.go
relayer/src/: broadcast_result.rs  config.rs  db.rs  entity.rs  lib.rs  logger.rs  main.rs  services.rs  test_blk_interaction.rs
relayer/src/config/: contract.rs
relayer/src/entity/: match_entity.rs
relayer/src/services/: blockchain_broadcaster.rs  broadcast_result.rs
relayer/src/traits/: broadcaster.rs
relayer/tests/: in_memory_logger.rs  lib_test.rs
relayer/testutil/: db.go  mock_broadcaster.go  mock_chain_client.go  testutil.go
(+164 files in other folders)
