[package]
name = "relayer"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
alloy = { version = "1.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
async-trait = "0.1"
chrono = "0.4"
uuid = "1.0"

[dev-dependencies]
mockall = "0.13"
chrono = "0.4"
uuid = "1.0"

